<resources>
    <string name="app_name">Meme Review</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_meme_page">MemePageActivity</string>
    <string name="tab_text_1">Newest</string>
    <string name="tab_text_2">Popular</string>
    <string name="tab_text_3">Subscribed</string>
    <string name="choose_from_gallery">Choose meme from gallery</string>
    <string name="uploadMeme">Upload meme</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="noUserYet">Create an account</string>
    <string name="nickname">Nickname</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="title_fresh">Fresh</string>
    <string name="title_hot">Hot</string>
    <string name="title_owned">Owned</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="sound_title_settings">Audio Volume</string>
    <string name="themes_title_settings">Themes</string>
    <string name="theme_blue">Deep Ocean</string>
    <string name="theme_red">Bloodbath</string>
    <string name="theme_black">Dark Knight</string>
    <string name="save_changes">Save Changes</string>
</resources>
