<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_owned"
        android:icon="@drawable/owned_icon"
        android:title="@string/title_owned" />

    <item
        android:id="@+id/navigation_hot"
        android:icon="@drawable/hot_icon"
        android:title="@string/title_hot" />

    <item
        android:id="@+id/navigation_fresh"
        android:icon="@drawable/fresh_icon"
        android:title="@string/title_fresh" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings_icon"
        android:title="@string/title_settings" />


</menu>
