<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sound_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:background="#50FFFFFF"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/sound_title_settings"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/sound_percentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:background="#32FFFFFF"
        android:gravity="center"
        android:padding="10dp"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/sound_progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sound_title"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/sound_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:background="#32FFFFFF"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192" />

    <SeekBar
        android:id="@+id/sound_seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#32FFFFFF"
        android:layout_marginHorizontal="40dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sound_progressBar"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/themes_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#50FFFFFF"
        android:layout_marginHorizontal="40dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/themes_title_settings"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.341" />

    <ImageView
        android:id="@+id/themes_background"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginHorizontal="40dp"
        android:background="#32FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/themes_title"
        app:layout_constraintVertical_bias="0.0"/>

    <ImageButton
        android:id="@+id/theme_red"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/app_background_red"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/theme_blue"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/themes_title"
        app:layout_constraintVertical_bias="0.124" />

    <ImageButton
        android:id="@+id/theme_blue"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/app_background_blue"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/themes_title"
        app:layout_constraintVertical_bias="0.124" />

    <ImageButton
        android:id="@+id/theme_black"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/app_background_black"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/theme_blue"
        app:layout_constraintTop_toBottomOf="@+id/themes_title"
        app:layout_constraintVertical_bias="0.124" />

    <TextView
        android:id="@+id/theme_text_red"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/theme_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/theme_text_blue"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theme_red"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/theme_text_blue"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/theme_blue"
        app:layout_constraintBottom_toBottomOf="@+id/themes_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theme_blue"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/theme_text_black"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/theme_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/theme_text_blue"
        app:layout_constraintTop_toBottomOf="@+id/theme_black"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/settings_save_changes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"
        android:background="#50FFFFFF"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/themes_background"
        app:layout_constraintVertical_bias="0.096" />

</androidx.constraintlayout.widget.ConstraintLayout>